[project]
name = "langchain-vault-demo"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "Guilherme Santos", email = "gsantos@hashicorp.com" }]
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.16",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.0",
]

[project.scripts]
langchain-vault-demo = "langchain_vault_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["isort>=6.0.1", "ruff>=0.11.8"]
